# iggy

./: Cargo.toml  README.md
src/: all.rs  common.rs  contiguous.rs  continuous_loop.rs  main.rs  new_only.rs
