[package]
name = "mina-indexer-block-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
fs = { path = "../fs" }
glob = "0.3.1"
blockchain = { path = "../blockchain" }
log = "0.4.19"
env_logger = "0.10.0"
